tests/error/nested_errors/not_defined_if.err
Error: Variable not defined (at $FILE:9:11)
  | 
7 |         def bar() -> int:
8 |             return 0
9 |     return bar()
  |            ^^^ `bar` might be undefined ...

Note:
  | 
5 | def foo(b: bool) -> int:
6 |     if b:
  |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
